--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
           <div class="span3">
             <div class="align"> <i class="icon-vector sev_icon"></i> </div>
             <h2>Learning Without Bars</h2>
-            <p>Unstudious is working with teachers from collges, schools and prepration courses to provide all their learning content with us. Its your digital notebook, for everything you wanted to learn.</p>
+            <p>Unstudious is working with teachers from colleges, schools and prepration courses to provide all their learning content with us. Its your digital notebook, for everything you wanted to learn.</p>
           </div>
           <!-- /.span3 -->
           <div class="span3">
