Edited some grammatical errors

--- a/index.html
+++ b/index.html
@@ -340,8 +340,8 @@
             <hr class="featurette-divider">
             <div class="featurette">
               <h2 class="featurette-heading">Want to know more? <span class="muted">| a little about us</span></h2>
-              <p>We a just a few people who were fed up carrying heavy textbooks, difference in the quality of education which we get and getting our notes photocopied. Seriously, this is the 21st century and we are still relying on paper. We are here to try and change the way education works today.</p>
-              <p>We are working with teachers from schools, colleges and even from the ones who teach you for prep courses, so that you can learn from the best teachers. We just want to digitize education.</p>
+              <p>We are students who were fed up carrying heavy textbooks, the difference in quality of education we get and getting your study material photocopied. We are in the 21st century and we still rely on paper. We are trying to change the way education is consumed today.</p>
+              <p>We are working with teachers from schools, colleges and from preparation courses, so that you can learn from the best teachers around the world. </p>
               <p>We are a team of two people who are trying very hard for a better future. But you can be a part of us, just leave us an email at: <a href="mailto:team@unstudious.com">team@unstudious.com</a></p>
             </div>
             <!-- /.featurette -->
